--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,22 @@
     <modules>
         <module>spring-01-ioc1</module>
         <module>spring-01-ioc2</module>
+        <module>spring-02-di</module>
+        <module>spring-03-autowired</module>
+        <module>spring-04-annotation</module>
+        <module>spring-05-appconfig</module>
     </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>5.2.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
     </dependencies>
 
